# my_ai_training

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflow/: ci.yml
cmake/: gtest.cmake
include/: ir.h
src/: assertions.cc  common.h  ir.h
src/ir/: array_ref.h  assertions.cc  graph_node_list.h  interned_strings.cc  ir.h
src/ncnn/: allocator.h  mat.h  ncnn_export.h  platform.h
src/onnx_ir/: assertions.cc  assertions.h  graph_node_list.h  interned_strings.cc  interned_strings.h  ir.h
unittests/: CMakeLists.txt  ir_test.cc  onnx_ir_test.cc
